# UniversityCxx

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
application/: CMakeLists.txt  Makefile  my_app
application/include/: app.hpp
application/source/: app.cpp  main.cpp
controller/: CMakeLists.txt  Makefile
controller/abstract_controller/: CMakeLists.txt  Makefile
controller/abstract_controller/include/: abstract_controller.hpp
controller/cli_controller/: CMakeLists.txt  Makefile
controller/cli_controller/include/: cli_controller.hpp
controller/cli_controller/source/: cli_controller.cpp
model/: CMakeLists.txt  Makefile
model/builder/: CMakeLists.txt  Makefile
model/builder/include/: builder.hpp
model/builder/source/: builder.cpp
model/grades/: CMakeLists.txt  Makefile
model/grades/include/: grades.hpp
model/grades/source/: grades.cpp
model/project/: CMakeLists.txt  Makefile
model/project/include/: project.hpp
model/project/source/: project.cpp
model/student/: CMakeLists.txt  Makefile
model/student/abstract_student/: CMakeLists.txt  Makefile
model/student/graduate/: CMakeLists.txt  Makefile
model/student/junior/: CMakeLists.txt  Makefile
model/student/senior/: CMakeLists.txt  Makefile
repository/: CMakeLists.txt  Makefile
repository/abstract_repository/: CMakeLists.txt  Makefile
repository/in_memory_repository/: CMakeLists.txt  Makefile
service/: CMakeLists.txt  Makefile
service/university/: CMakeLists.txt  Makefile
tests/: CMakeLists.txt  Makefile
tests/model/: CMakeLists.txt  Makefile  tests
tests/model/builder/: builder_tests.cpp
tests/model/grades/: grades_tests.cpp
tests/model/project/: project_tests.cpp
tests/model/student/: student_tests.cpp
tests/repository/: in_memory_repository_tests.cpp
(+13 files in other folders)
